# vcpkg_curl_testcase

./: CMakeLists.txt  appveyor.yml  test.c
