cmake_minimum_required (VERSION 3.5)
project(vcpkg_curl_testcase C CXX)
include (CheckFunctionExists)
include(FindPackageHandleStandardArgs)
include(CMakeDependentOption)

macro(check_package name)
    string(TOUPPER ${name} key)
    find_package(${name} CONFIG QUIET)
    if(NOT ${key}_FOUND AND NOT ${name}_FOUND)
        find_package(${name} MODULE)
    endif()
    if(${key}_FOUND OR ${name}_FOUND)
        set(HAVE_${key} ON CACHE INTERNAL "HAVE_${key}")
    else()
        set(HAVE_${key} OFF CACHE INTERNAL "HAVE_${key}")
    endif()
endmacro()

check_package(CURL)
add_executable(example test.c)
