cmake_minimum_required (VERSION 3.5)
project(vcpkg_curl_testcase C)
find_package(CURL CONFIG)
if(NOT CURL_FOUND)
  find_package(CURL MODULE REQUIRED)
endif()
add_executable(example test.c)
target_link_libraries(example PRIVATE ${CURL_LIBRARIES})
target_include_directories(example PRIVATE ${CURL_INCLUDE_DIRS})